# libpointmatcher

./: CMakeLists.txt  CatkinBuild.cmake  README.md  jenkins-pipeline  package.xml
contrib/yaml-cpp-pm/: CMakeLists.txt
doc/: CompilationMac.md  CompilationUbuntu.md  DataFilters.md  ReleaseNotes.md  UnitTestDev.md  UsingInRos.md
pointmatcher/: Bibliography.cpp  DataPoints.cpp  DataPointsFiltersImpl.h  ICP.cpp  IO.cpp  OutlierFiltersImpl.cpp  PointMatcher.h  PointMatcherPrivate.h  Registry.cpp  TransformationsImpl.cpp
pointmatcher/DataPointsFilters/: CovarianceSampling.cpp  Gestalt.cpp  NormalSpace.cpp  OctreeGrid.cpp  SurfaceNormal.cpp
pointmatcher/DataPointsFilters/utils/: utils.h
utest/ui/: DataFilters.cpp
