<package format="3">
	<name>libpointmatcher</name>
	<version>1.3.1</version>
	<description>
		libpointmatcher is a modular ICP library, useful for robotics and computer vision.
	</description>
	<maintainer email="f.pomerleau@gmail.com">Francois Pomerleau</maintainer>
	<license>BSD</license>
	<url type="repository">https://github.com/ethz-asl/libpointmatcher</url>

  <!-- If a pure-cmake build is desired, the buildtool should be switched to 'cmake' -->
  <!-- On the other hand, if a catkin build is desired, the build tool depend should be 'catkin' -->
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <build_depend>boost</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>qpmad</build_depend>

	<exec_depend>boost</exec_depend>
	<exec_depend>libnabo</exec_depend>
	<exec_depend>eigen</exec_depend>
	<exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <!-- For a pure-cmake build the package must be exported explicitly -->
  <!-- Thus the following block of code must be un-commented -->
  <!--
  <export>
    <build_type>cmake</build_type>
  </export>
  -->

</package>
